# Carboxylate

./: .gitignore  CONCEPTS.md  Cargo.toml  README.md  build.rs
src/: lsass_dumper.rs  main.rs  sam_dumper.rs  token_impersonator.rs
